Added min task width

--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "minify": "minify ./dist/mermaid.js > ./dist/mermaid.min.js",
     "release": "yarn build -p --config webpack.config.prod.babel.js",
     "lint": "eslint src",
-    "e2e:depr": "yarn lint && jest e2e --config e2e/jest.config.js",
+    "e2e:depr": "jest e2e --config e2e/jest.config.js",
     "cypress": "percy exec -- cypress run",
     "e2e": "start-server-and-test dev http://localhost:9000/ cypress",
-    "e2e-upd": "yarn lint && jest e2e -u --config e2e/jest.config.js",
+    "e2e-upd": "jest e2e -u --config e2e/jest.config.js",
     "dev": "webpack-dev-server --config webpack.config.e2e.js",
-    "test": "yarn lint && jest src/.*",
+    "test": "jest src/.*",
     "test:watch": "jest --watch src",
     "prepublishOnly": "yarn build && yarn release && yarn test && yarn e2e",
     "prepush": "yarn test",
